<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/windowBackground"
    android:orientation="horizontal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">


    <ToggleButton
        android:id="@+id/control_timeshift"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/control_toggle_timeshift"
        android:onClick="onControlBarItemClick"
        android:textOff="@string/btnTimeShiftPause"
        android:textOn="@string/btnTimeShiftResume" />

    <Button
        android:id="@+id/control_vol_dec"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_volume_down_black_24dp"
        android:onClick="onControlBarItemClick"
        android:text="@string/btnVolDec" />

    <Button
        android:id="@+id/control_vol_inc"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_volume_up_black_24dp"
        android:onClick="onControlBarItemClick"
        android:text="@string/btnVolInc" />
</LinearLayout>