<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:clickable="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:adjustViewBounds="false"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_settings_remote_accent_24dp" />

        <TextView
            android:id="@+id/setup_title_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/setup_edit_ip"
            android:text="@string/pref_title_ip"
            android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse" />

        <TextView
            android:id="@+id/setup_summary_ip"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:labelFor="@id/setup_edit_ip"
            android:text="Bitte geben Sie die IP Adresse Ihres Fernsehers ein."
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
            android:textColor="@color/colorPrimaryLight" />

        <EditText
            android:id="@+id/setup_edit_ip"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:ems="10"
            android:inputType="number"
            android:text="10.0.2.2"
            android:textColor="@color/colorIcons"
            android:textSize="20sp" />

        <Button
            android:id="@+id/setup_button_confirm_ip"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSetupDialogFragmentClick"
            android:text="@string/btnConfirm" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bitte starten sie bei erster Verwendung der App die Kanalsuche."
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse" />

        <Button
            android:id="@+id/setup_button_channelscan"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="onSetupDialogFragmentClick"
            android:text="Kanalscan starten"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/setup_progress_channelscan"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>